19-Nov-2012 Opus.Core.ITargetFilters no longer accepts a Toolchains keyword attribute, but now a ToolsetTypes System.Type[] keyword attribute. Generally, use typeof(package.Toolset) to fill out this attribute.

16-Nov-2012 CSharp package no longer has a -CSharp.toolchain action. This is due to changes to where the C# compiler is location (now the DotNetFramework package).

15-Nov-2012 CommandLineProcessor.Processor.Execute no longer takes a string for the executable path, since it can be derived from the ITool and the Node's Target.

15-Nov-2012 VisualC 10.0 now checks for both Express and Professional versions for solution builds.

15-Nov-2012 Renamed Opus.Core.IToolRequiredEnvironmentVariables to Opus.Core.IToolForwardedEnvironmentVariables

14-Nov-2012 Removed Opus.Core.AssignOptionCollectionAttribute as it is has been superceded by Toolsets.

14-Nov-2012 Removed Opus.Core.RegisterTargetToolChainAttribute as it has been superceded by Toolsets.

14-Nov-2012 Removed C.ClassNames as it has been superceded by Toolsets and tool interfaces.

14-Nov-2012 Removed Opus.Core.AssignToolForModuleAttribute as it has been superceded by Toolsets.

14-Nov-2012 Removed Opus.Core.MapToolChainClassTypesAttribute as it has been superceded by Toolsets.

14-Nov-2012 Removed Opus.Core.TargetCollection that is no longer used.

14-Nov-2012 VisualCCommon.ICCompilerOptions now has a RuntimeLibrary option. This is in replacement to the option from the now removed Toolchain.

14-Nov-2012 CSharp Csc tool has moved to the DotNetFramework package, the latter of which now implements a 'dotnet' toolset.

14-Nov-2012 Tool interfaces are now required for each type of tool implemented. Local and export types must be assigned to the interfaces using the Opus.Core.LocalAndExportTypes attribute. Toolset providers must also be provided using the Opus.Core.AssignToolsetProvider attribute.
