@@ -141,6 +141,8 @@ namespace Opus.Core
             }
             catch (System.Reflection.TargetInvocationException exception)
             {
+                Exception.DisplayException(exception, "PreExecute function error");
+#if false
                 Core.Log.MessageAll("PreExecute function threw an exception: " + exception.Message);
                 System.Exception innerException = exception;
                 while (innerException.InnerException != null)
@@ -149,6 +151,7 @@ namespace Opus.Core
                     Core.Log.MessageAll("Inner exception: {0}, {1}", innerException.GetType().ToString(), innerException.Message);
                 }
                 Core.Log.MessageAll(innerException.StackTrace);
+#endif
                 return false;
             }
 
@@ -205,6 +208,8 @@ namespace Opus.Core
                 }
                 catch (System.Reflection.TargetInvocationException exception)
                 {
+                    Exception.DisplayException(exception, "PostExecute function error");
+#if false
                     Core.Log.MessageAll("PostExecute function threw an exception: " + exception.Message);
                     System.Exception innerException = exception;
                     while (innerException.InnerException != null)
@@ -213,6 +218,7 @@ namespace Opus.Core
                         Core.Log.MessageAll("Inner exception: {0}, {1}", innerException.GetType().ToString(), innerException.Message);
                     }
                     Core.Log.MessageAll(innerException.StackTrace);
+#endif
                     return false;
                 }
 
