@@ -36,6 +36,8 @@ namespace Opus
             }
             catch (Core.Exception exception)
             {
+                Core.Exception.DisplayException(exception);
+#if false
                 Core.Log.ErrorMessage("Opus Exception: " + exception.Message);
                 System.Exception innerException = exception;
                 while (innerException.InnerException != null)
@@ -47,10 +49,14 @@ namespace Opus
                 {
                     Core.Log.ErrorMessage("\n" + innerException.StackTrace.ToString());
                 }
+#endif
                 System.Environment.ExitCode = -1;
             }
             catch (System.Reflection.TargetInvocationException exception)
             {
+                Core.Exception.DisplayException(exception);
+
+#if false
                 Core.Log.ErrorMessage("*** Reflection Exception (type {0}) ***", exception.GetType().ToString());
                 Core.Log.ErrorMessage(exception.Message);
                 System.Exception innerException = exception;
@@ -60,10 +66,13 @@ namespace Opus
                     Core.Log.ErrorMessage("Inner exception: {0}, {1}", innerException.GetType().ToString(), innerException.Message);
                 }
                 Core.Log.ErrorMessage("\n" + innerException.StackTrace.ToString());
+#endif
                 System.Environment.ExitCode = -2;
             }
             catch (System.Exception exception)
             {
+                Core.Exception.DisplayException(exception);
+#if false
                 Core.Log.ErrorMessage("*** System Exception (type {0}) ***", exception.GetType().ToString());
                 Core.Log.ErrorMessage(exception.Message);
                 System.Exception innerException = exception;
@@ -73,6 +82,7 @@ namespace Opus
                     Core.Log.ErrorMessage("Inner exception: {0}, {1}", innerException.GetType().ToString(), innerException.Message);
                 }
                 Core.Log.ErrorMessage("\n" + innerException.StackTrace.ToString());
+#endif
                 System.Environment.ExitCode = -2;
             }
             finally
